feat(filter): fix filter by fields on getMany calls
